TimeEntry/src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Billed__c</fullName>
        <formula>Timesheet__r.Developer__r.Billable_Rate_per_hour__c  *  Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pause_Time__c</fullName>
        <label>Pause Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Elapsed__c</fullName>
        <label>Time Elapsed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_Total_Mins__c</fullName>
        <formula>IF( ISNULL(  Time_Elapsed__c  ), 
     IF( ISNULL( Pause_Time__c ) ,
    (NOW()  -  Start_Time__c) *24*60,
    (Pause_Time__c - Start_Time__c ) *24*60), 
     IF( ISNULL( Pause_Time__c ) ,
    (NOW()  -  Time_Elapsed__c) *24*60,
    (Pause_Time__c - Time_Elapsed__c ) *24*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timer Total Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Time Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>